<resources>
    <string name="app_name">Easy Calc</string>
    <string name="enter_1st_number">Enter 1st Number</string>
    <string name="enter_2nd_number">Enter 2nd Number</string>
    <string name="_0">0</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="clear">C</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="exit">EXIT</string>
    <string name="required">Required</string>
</resources>
