<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="davegilbier.barrina.com.easycalc.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/dark"

>

    <EditText
        android:id="@+id/firstNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_1st_number"
        android:inputType="number"



    />

    <EditText
        android:id="@+id/secNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/enter_2nd_number"
        android:inputType="number"
         />


    <TextView
        android:id="@+id/textResult"
        android:background="#c0c0c0"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
     />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/aboveLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/add"
                android:textSize="30sp"
                android:onClick="Add"/>

            <Button
                android:id="@+id/btnSubtract"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:onClick="Subtract"
                android:text="@string/minus"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:onClick="Clear"
                android:text="@string/clear"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/aboveLinear"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:onClick="Multiply"
                android:text="@string/multiply"
                android:textSize="30sp"
                />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:onClick="Divide"
                android:text="@string/divide"
                android:textSize="30sp"
                />

            <Button
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:onClick="Exit"
                android:text="@string/exit"
                android:textSize="30sp"
                />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>

